--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Esamhasho</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="msapplication-starturl" content="/">
+  <meta name="theme-color" content="#359921">
+  <meta name="msapplication-TileColor" content="#da532c">
+
+  <title>Esamhasho</title>  
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" color="#5bbad5">
   <base href="/">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-  <link href="assets/css/prettyPhoto.css" rel="stylesheet">
-  <link href="assets/css/price-range.css" rel="stylesheet">
+  <!-- <link href="assets/css/price-range.css" rel="stylesheet"> -->
   <link href="assets/css/animate.css" rel="stylesheet">
   <link href="assets/css/main.css" rel="stylesheet">
   <link href="assets/css/responsive.css" rel="stylesheet">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/images/ico/apple-touch-icon.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/ico/App-apple-logo.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/images/ico/Apple1.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/images/ico/1024px-Mac.svg.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
@@ -29,13 +36,7 @@
                         <h2><span>e</span>-samhasho</h2>
                         <p></p>
                     </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="address">
-                        <img src="/assets/images/home/map.png" alt="" />
-                        <p>Qatar</p>
-                    </div>
-                </div>
+                </div>              
             </div>
         </div>
     </div>
@@ -69,10 +70,18 @@
 <script src="assets/js/jquery-3.1.1.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery.scrollUp.min.js"></script>
-<script src="assets/js/price-range.js"></script>
 <script src="assets/js/jquery.prettyPhoto.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="assets/js/header.js"></script>
-
+<script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js')
+      .then((registration) => {       
+      })
+      .catch((err) => {
+        console.log('SW error', err);
+      });
+    }
+  </script>
 </body>
 </html>
